k8s/infra/kafka/kafdro/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdro
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kafdro
  template:
    metadata:
      labels:
        app: kafdro
    spec:
      containers:
        - image: obsidiandynamics/kafdrop:3.23.0
          name: kafdro
          ports:
            - containerPort: 9000
              protocol: TCP

      restartPolicy: Always
