k8s/infra/kafka/kafdro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdro
spec:
  type: ClusterIP
  ports:
    - name: "9000"
      port: 9000
      protocol: TCP
  selector:
    app: kafdro
